--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.1.2
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  firebase_database: ^11.1.6
 
 dev_dependencies:
   flutter_test:
