--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   firebase_database: ^11.1.6
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
